[package]
name = "rao"
version = "0.1.0"
authors = ["Ming <mingyli34@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm10-0"] }
itertools = "0.10.0"
logos = "0.11.4"
